--- a/WithThem-Frontend/package.json
+++ b/WithThem-Frontend/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview --port 8080"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
     "@stomp/stompjs": "^7.0.0",
+    "heroicons": "^2.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3"
